# ExposhotCamera

./: AGENTS.md  IndexNext.ets  LICENSE  README.md  build-profile.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: README.md  architecture.md  burst_capture_dev.md  callback_flow.md  development.md  deving.md  plan.md  testing.md  usage.md
docs/design/: spsc-queue-refactor.md  threading-refactor.md
docs/issues/: imagesource-crash.md  preview-performance.md  taskqueue-cv-wait-crash.md
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_expo_camera.cpp
entry/src/main/cpp/camera/: burst_capture.cpp  burst_capture.h  camera_command_queue.cpp  camera_command_queue.h  capture_manager.cpp  capture_manager.h  expo_camera.cpp  expo_camera.h  file_saver.cpp  file_saver.h  image_processor.cpp  image_processor.h  napi_expo_camera.cpp  owned_buffer.h  render_slot.h  task_queue.cpp  task_queue.h
entry/src/main/cpp/camera/dark/: dark.7z
entry/src/main/cpp/types/libexpocamera/: Index.d.ts  oh-package.json5
entry/src/main/ets/domains/shootTaskDomain/: ShootTaskDomain.ets  ShootTaskEntity.ets  ShootTaskParam.ets  StateShootTaskStatus.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets  IndexTest.ets  TestBasicCamera.ets  TestBurstCapture.ets  TestCaptureMode.ets  TestEncodePicture.ets  TestFocusMagnifier.ets  TestFocusPoint.ets  TestFullFeatures.ets  TestStackSimulate.ets
entry/src/main/ets/util/: Constants.ets  PermissionManager.ets  WindowManager.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
